--- a/composer.json
+++ b/composer.json
@@ -62,6 +62,7 @@
     },
     "require-dev": {
         "sensiolabs/security-checker": "^5.0",
+        "symfony/debug-pack": "^1.0",
         "symfony/profiler-pack": "^1.0"
     }
 }
